# 176-final-project-alexey-grishakov

./: .gitignore  README.md
code/: pyproject.toml
code/benchmarks/: bench.py  compute_profile.py  eval.py  eval_helpers.py
code/data_processing/: data.py
code/eval_runs/default_benchmark/: runtime.csv
code/eval_runs/model_comparison/: context_metrics.csv  metrics.csv  polished_metrics.csv
code/eval_runs/profiled_compute/: profiled_compute.csv  profiled_top_ops.csv
code/inference/: inference.py
code/training/: checkpoints.py  grassman.py  train.py
code/training_logs/: grassmann_train_logs.csv  transformer_train_logs.csv
report/: mybib.bib  report.tex
