[project]
name = "final-project"
version = "0.1.0"
description = "Training a small LLM"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.21.0",
    "torchaudio>=2.8.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.9.0",
    "pyarrow>=17.0.0",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.1",
    "transformers>=5.2.0",
    "tqdm>=4.67.3",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "huggingface-hub>=1.4.1",
]

# ---------------------------------------------------------------------------
# uv-specific: resolve torch from the CUDA 13.0 wheel index
# ---------------------------------------------------------------------------
[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]
torchvision = [
    { index = "pytorch-cu130" },
]
torchaudio = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
